Add a workaround for windows sed being... odd.

--- a/Makefile.Windows
+++ b/Makefile.Windows
@@ -42,7 +42,10 @@ build-qmake:
 	cd build/qtservice && $(QMAKE)
 #FIX odd Fedora win32 build issue.
 	cd build/qtservice && make buildlib/Makefile
-	sed -i 's/IMPORT/EXPORT/g' build/qtservice/buildlib/Makefile.*
+	for file in Debug Release; do \
+		sed 's/IMPORT/EXPORT/g' build/qtservice/buildlib/Makefile.$$file build/qtservice/buildlib/Makefile.tmp; \
+		mv build/qtservice/buildlib/Makefile.tmp build/qtservice/buildlib/Makefile.$$file; \
+	done
 	cd build/qtservice && make
 	cp -a build/qtservice/lib/QtSolutions_Service-head.dll build/bin/QtSolutions_Service.dll
 	cp -a build/qtservice/lib/libQtSolutions_Service-head.a build/lib/libQtSolutions_Service.a
