Work around win32 libs getting mangled.

--- a/pacifica-builddeps.spec.in
+++ b/pacifica-builddeps.spec.in
@@ -1,3 +1,8 @@
+#Work around win32 libs getting mangled.
+%global debug_package %{nil}
+%global __spec_install_post /usr/lib/rpm/check-rpaths   /usr/lib/rpm/check-buildroot  \
+  /usr/lib/rpm/brp-compress
+   
 Name: pacifica-builddeps
 Version: @VERSION@
 Release: 1%{?dist}
